kustomize/components/network-policies/network-policy-wishlistservice.yaml
# wishlistservice: only the frontend may call it, on 50052. It calls nothing.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wishlistservice
spec:
  podSelector:
    matchLabels:
      app: wishlistservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
     - port: 50052
       protocol: TCP
  egress: []
